--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
+    "next-intl": "^3.26.5",
     "notyf": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
