--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "notyf": "^3.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.2.0",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
