--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-intl": "^3.26.5",
     "notyf": "^3.10.0",
     "react": "^19.0.0",
+    "react-calendly": "^4.3.1",
     "react-dom": "^19.0.0",
     "resend": "^4.2.0",
     "swiper": "^11.2.4"
