--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.1.7",
+    "@sentry/nextjs": "^9.15.0",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
