--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/third-parties": "^15.1.7",
     "@sentry/nextjs": "^9.15.0",
     "axios": "^1.7.9",
+    "embla-carousel-react": "^8.6.0",
     "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
