--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
     "next-intl": "^3.26.5",
+    "next-themes": "^0.4.6",
     "notyf": "^3.10.0",
     "react": "^19.0.0",
     "react-calendly": "^4.3.1",
