--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-calendly": "^4.3.1",
     "react-dom": "^19.0.0",
     "resend": "^4.2.0",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
