--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,11 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "20"
-
-      - name: Install dependencies
+          node-version: "20"      - name: Install dependencies
         run: npm i
+
+      - name: Run tests
+        run: npm run test:unit && npm run test:integration
 
       - name: Build project
         run: npm run build
