--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -27,18 +27,18 @@ jobs:
 
       - name: Install dependencies
         id: install
-        run: npm ci
-
-      - name: Run linting and type-checking
+        run: npm ci      - name: Run linting and type-checking
         id: lint_types
         run: npm run check-all
 
+      - name: Run unit and integration tests
+        id: tests
+        run: npm run test:unit && npm run test:integration
+
       - name: Build project
         id: build
-        run: npm run build
-
-      - name: Comment on PR if checks fail
-        if: failure() && (steps.install.outcome == 'failure' || steps.lint_types.outcome == 'failure' || steps.build.outcome == 'failure')
+        run: npm run build      - name: Comment on PR if checks fail
+        if: failure() && (steps.install.outcome == 'failure' || steps.lint_types.outcome == 'failure' || steps.tests.outcome == 'failure' || steps.build.outcome == 'failure')
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
