Refactor test documentation and configurations for improved clarity and consistency
- Updated TESTING_STATUS.md to enhance table formatting and clarify test statuses.
- Refactored jest.config.js for consistent quotation marks and improved readability.
- Improved jest.setup.integration.js and jest.setup.js for consistent formatting and clarity.
- Updated package.json to fix formatting issues in the scripts section.
- Refactored playwright.config.ts for consistent quotation marks and improved readability.
- Enhanced E2E tests in calendly-integration.spec.ts and main-functionality.spec.ts for better readability and consistency in assertions.
- Updated tsconfig.json for improved formatting and clarity in the include section.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "geome7ric-landing",
   "version": "0.1.0",
-  "private": true,  "scripts": {
+  "private": true,
+  "scripts": {
     "dev": "next dev --turbopack --port 3001",
     "dev:check": "concurrently \"next dev --turbopack\" \"tsc --watch --preserveWatchOutput\"",
     "build": "next build",
