--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -27,7 +27,8 @@ jobs:
 
       - name: Install dependencies
         id: install
-        run: npm ci      - name: Run linting and type-checking
+        run: npm ci      
+      - name: Run linting and type-checking
         id: lint_types
         run: npm run check-all
 
