--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,15 @@
     "paths": {
       "@/*": ["./src/*"]
     }
-  },  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tests/**/*.ts", "tests/**/*.tsx"],
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
   "exclude": ["node_modules"],
   "types": ["jest", "@testing-library/jest-dom"]
 }
